--- a/angular.json
+++ b/angular.json
@@ -63,10 +63,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "tributes:build:production"
+              "buildTarget": "tributes:build:production"
             },
             "development": {
-              "browserTarget": "tributes:build:development"
+              "buildTarget": "tributes:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -74,7 +74,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "tributes:build"
+            "buildTarget": "tributes:build"
           }
         },
         "test": {
