--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/compiler": "^18.2.11",
     "@angular/core": "^18.2.11",
     "@angular/forms": "^18.2.11",
+    "@angular/material": "^18.2.12",
     "@angular/platform-browser": "^18.2.11",
     "@angular/platform-browser-dynamic": "^18.2.11",
     "@angular/router": "^18.2.11",
@@ -29,6 +30,7 @@
     "@angular-devkit/build-angular": "^18.2.11",
     "@angular/cli": "~18.2.11",
     "@angular/compiler-cli": "^18.2.11",
+    "@types/d3": "^7.4.3",
     "@types/d3-dispatch": "^3.0.6",
     "@types/d3-drag": "^3.0.7",
     "@types/d3-timer": "^3.0.2",
