--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^18.2.11",
     "@swimlane/ngx-graph": "^9.0.1",
     "bootstrap": "^5.3.2",
+    "prettier": "^3.4.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
