--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@angular-devkit/build-angular": "^18.2.11",
     "@angular/cli": "~18.2.11",
     "@angular/compiler-cli": "^18.2.11",
+    "@angular/localize": "^18.2.11",
     "@types/d3": "^7.4.3",
     "@types/d3-dispatch": "^3.0.6",
     "@types/d3-drag": "^3.0.7",
